--- a/src/Makefile
+++ b/src/Makefile
@@ -7,23 +7,23 @@ loimos: $(OBJS) $(OBJS_DECL)
 	$(CHARMC) -o loimos $(OBJS) -language charm++ \
 	-module CkMulticast $(OPTS)
 
-main.decl.h: main.ci
+loimos.decl.h: main.ci
 	$(CHARMC) main.ci
 
-Main.o: Main.C Main.h main.decl.h
-	$(CHARMC) $(OPTS) $(INC) -o Main.o Main.C
+Main.o: Main.C Main.h loimos.decl.h
+	$(CHARMC) $(OPTS) $(INC) -o Main.o -c Main.C
 
-People.o: People.C People.h main.decl.h
-	$(CHARMC) $(OPTS) $(INC) -o People.o People.C
+People.o: People.C People.h loimos.decl.h
+	$(CHARMC) $(OPTS) $(INC) -o People.o -c People.C
 
-Locations.o: Locations.C Locations.h main.decl.h
-	$(CHARMC) $(OPTS) $(INC) -o Locations.o Locations.C
+Locations.o: Locations.C Locations.h loimos.decl.h
+	$(CHARMC) $(OPTS) $(INC) -o Locations.o -c Locations.C
 
 Defs.o: Defs.h
-	$(CHARMC) $(OPTS) $(INC) -o Defs.o Defs.C
+	$(CHARMC) $(OPTS) $(INC) -o Defs.o -c Defs.C
 
 clean:
 	rm -f *.decl.h *.def.h *.o charmrun loimos
 
 test: loimos
-	./charmrun +p4 ./loimos 110 20 15 6 15 ++local	
+	./charmrun +p4 ./loimos 110 20 15 6 15 ++local
